--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ActivitiesApp</string>
+    <string name="app_name">a17johpe - assignment 3</string>
 </resources>
